--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
                     <li><a href="tutorials/tutorial03/07-tacotemple/index.html">Taco Temple</a></li>
                 </ol>
             <li><a href="tutorials/tutorial04/index.html">Tutorial 04</a></li>
+            <li>Tutorial 5: JavaScript: Event Handlers</li>
+                <ol>
+                    <li><a href="tutorials/tutorial05/01-font-switcher/index.html">Font Switcher</a></li>
+                    <li><a href="tutorials/tutorial05/02-theme-switcher/index.html">Theme Switcher</a></li>
+                </ol>
             </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Homework</h2>
+        <ul>
+            <li><a href="hw2/index.html">Homework 2 HTML/CSS Client</a></li>
         </ul>
     </section>
 </body>
