--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
                     <li><a href="tutorials/tutorial03/07-tacotemple/index.html">Taco Temple</a></li>
                 </ol>
             <li><a href="tutorials/tutorial04/index.html">Tutorial 04</a></li>
+            <li>Tutorial 5: JavaScript: Event Handlers</li>
+                <ol>
+                    <li><a href="tutorials/tutorial05/01-font-switcher/index.html">Font Switcher</a></li>
+                    <li><a href="tutorials/tutorial05/02-theme-switcher/index.html">Theme Switcher</a></li>
+                </ol>
             </li>
+            <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
         </ul>
     </section>
 </body>
