--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                     <li><a href="tutorials/tutorial05/02-theme-switcher/index.html">Theme Switcher</a></li>
                 </ol>
             </li>
-            <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
         </ul>
     </section>
 
@@ -36,6 +35,13 @@
         <h2>Homework</h2>
         <ul>
             <li><a href="hw2/index.html">Homework 2 HTML/CSS Client</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Quizzes</h2>
+        <ul>
+            <li><a href="quizzes/quiz01/index.html">Quiz 1</a></li>
         </ul>
     </section>
 </body>
