--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="tutorials/tutorial05/01-font-switcher/index.html">Font Switcher</a></li>
                     <li><a href="tutorials/tutorial05/02-theme-switcher/index.html">Theme Switcher</a></li>
                 </ol>
+                <li><a href="tutorials/tutorial06/index.html">Tutorial 6: Practice with higher-order iteration functions</a></li>
             </li>
         </ul>
     </section>
