--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <h2>Homework</h2>
         <ul>
             <li><a href="hw2/index.html">Homework 2 HTML/CSS Client</a></li>
+            <li><a href="hw/hw03/index.html">Homework 3 Building a "Vanilla" JavaScript Client</a></li>
         </ul>
     </section>
 
