--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <ul>
             <li><a href="hw2/index.html">Homework 2 HTML/CSS Client</a></li>
             <li><a href="hw/hw03/index.html">Homework 3 Building a "Vanilla" JavaScript Client</a></li>
+            <li><a href="hw/hw04/dist/index.html">Homework 4 React Client</a></li>
+        </ul>
         </ul>
     </section>
 
